--- a/WebContent/endereco/cidade/index.xhtml
+++ b/WebContent/endereco/cidade/index.xhtml
@@ -10,34 +10,68 @@
 	<ui:composition template="/template/masterTemplate.xhtml">
 		<ui:param name="pageTitle" value="Listar Cidades"></ui:param>
 		<ui:define name="content">
-			<!-- -OLA -->
-			<h:form prependId="false">
-				<p:dataTable id="dataTable" var="cidade"
-					value="#{cidadeController.listaAllCidades}" paginator="true"
-					rows="10"
+			<h:form id="form">
+				<p:panel id="panel" header="Registro" toggleable="true">
+					<p:focus context="panel" />
+					<h:outputText value="#{cidadeBean.cidadeSelecionada}"></h:outputText>
+					<h:panelGrid columns="2" cellspacing="50">
+						<h:outputText value="Nome:"></h:outputText>
+						<h:panelGroup>
+							<p:inputText id="cidade-name" label="username" size="40"
+								requiredMessage="Por favor, insira o nome da cidade."
+								value="#{cidadeBean.cidadeSelecionada.nome}">
+							</p:inputText>
+							<p:message for="cidade-name" />
+						</h:panelGroup>
+						<h:outputText value="Pais:"></h:outputText>
+						<p:selectOneMenu value="#{cidadeBean.paisSelecionado}"
+							onchange="submit()"
+							valueChangeListener="#{cidadeBean.valueChangePais}" effect="fade">
+							<f:selectItem itemLabel="Select One" itemValue="" />
+							<f:selectItems value="#{cidadeBean.allPais}" var="pais"
+								itemLabel="#{pais.nome}" itemValue="#{pais}"></f:selectItems>
+						</p:selectOneMenu>		
+						<h:selectOneMenu value="#{cidadeBean.paisSelecionado}"
+							onchange="submit()"
+							valueChangeListener="#{cidadeBean.valueChangePais}" effect="fade">
+							<f:selectItem itemLabel="Select One" itemValue="" />
+							<f:selectItems value="#{cidadeBean.allPais}" var="pais"
+								itemLabel="#{pais.nome}" itemValue="#{pais}"></f:selectItems>
+						</h:selectOneMenu>						
+					</h:panelGrid>
+					<br style="clear: both;" />
+
+				</p:panel>
+
+			</h:form>
+			<h:form id="grid">
+
+				<br />
+				<br />
+
+				<p:dataTable var="cidade" value="#{cidadeBean.cidadesCadastradas}"
+					paginator="true" rows="10"
 					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-					rowsPerPageTemplate="5,10,15">
-					<p:column>
-						<f:facet name="header">
-							<h:outputText value="Nome" />
-						</f:facet>
+					rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">
+
+					<p:column headerText="Cidade" style="width:30%">
+						<h:outputText value="#{cidade.nome}" />
+					</p:column>
+					<p:column headerText="Estado" style="width:30%">
+						<h:outputText value="#{cidade.nome}" />
+					</p:column>
+					<p:column headerText="Pais" style="width:30%">
 						<h:outputText value="#{cidade.nome}" />
 					</p:column>
 					<p:column>
-						<f:facet name="header">
-							<h:outputText value="Estado" />
-						</f:facet>
-						<h:outputText value="#{cidade.estado.nome}" />
-					</p:column>
-					<p:column>
-						<f:facet name="header">
-							<h:outputText value="Ação" />
-						</f:facet>
-
+						<p:commandButton id="selectButton" update=":form:panel"
+							ajax="false"
+							actionListener="#{cidadeBean.prepararAlterarCidade(cidade)}"
+							icon="ui-icon-search" title="View">
+						</p:commandButton>
 					</p:column>
 				</p:dataTable>
 			</h:form>
-
 		</ui:define>
 	</ui:composition>
 </ui:composition>
