--- a/WebContent/endereco/pais/index.xhtml
+++ b/WebContent/endereco/pais/index.xhtml
@@ -8,7 +8,7 @@
 	xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/template/masterTemplate.xhtml">
 	<ui:composition template="/template/masterTemplate.xhtml">
-		<ui:param name="pageTitle" value="Gerenciar Cidades"></ui:param>
+		<ui:param name="pageTitle" value="Gerenciar Paises"></ui:param>
 		<ui:define name="content">
 			<h:form id="form">
 				<p:panel id="panel" header="Registro" toggleable="true">
@@ -16,25 +16,15 @@
 					<h:panelGrid columns="2" cellpadding="5">
 						<h:outputText value="Nome:"></h:outputText>
 						<h:panelGroup>
-							<p:inputText id="cidade-name" label="nome" size="40" required="true" requiredMessage="Por favor, insira o nome."
-								value="#{cidadeBean.cidadeSelecionada.nome}">
+							<p:inputText id="pais-name" label="nome" size="40"
+								required="true" requiredMessage="Por favor, insira o nome."
+								value="#{paisBean.paisSelecionado.nome}">
 							</p:inputText>
-							<p:message for="cidade-name" />
+							<p:message for="pais-name" />
 						</h:panelGroup>
-						<h:outputText value="Pais:"></h:outputText>
-						<p:selectOneMenu id="city" value="#{cidadeBean.paisSelecionado}">
-							<f:selectItems value="#{cidadeBean.listaPais}" />
-							<p:ajax update="listaEsdadosFiltrados"
-								listener="#{cidadeBean.valueChangePais}" event="change" />
-						</p:selectOneMenu>
-						<h:outputText value="Estado:"></h:outputText>
-						<p:selectOneMenu id="listaEsdadosFiltrados"
-							value="#{cidadeBean.estadoSelecionado}">
-							<f:selectItems value="#{cidadeBean.listaEsdados}" />
-						</p:selectOneMenu>
-						<p:commandButton actionListener="#{cidadeBean.salvarCidade}"
+						<p:commandButton actionListener="#{paisBean.salvarPais}"
 							update=":grid:listagem" ajax="false" value="Salvar"></p:commandButton>
-						<p:commandButton actionListener="#{cidadeBean.prepararNovaCidade}"
+						<p:commandButton actionListener="#{paisBean.prepararNovoPais}"
 							update=":form:panel" ajax="false" value="Limpar"></p:commandButton>
 					</h:panelGrid>
 					<br style="clear: both;" />
@@ -43,24 +33,18 @@
 			<br />
 			<br />
 			<h:form id="grid">
-				<p:dataTable id="listagem" var="cidade"
-					value="#{cidadeBean.cidadesCadastradas}" paginator="true" rows="10" emptyMessage="Não existem cidades cadastradas."
+				<p:dataTable id="listagem" var="pais"
+					value="#{paisBean.paisesCadastrados}" paginator="true" rows="10"
+					emptyMessage="Não existem paises cadastrados."
 					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 					rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">
-
-					<p:column headerText="Cidade" style="width:30%">
-						<h:outputText value="#{cidade.nome}" />
-					</p:column>
-					<p:column headerText="Estado" style="width:30%">
-						<h:outputText value="#{cidade.estado.nome}" />
-					</p:column>
-					<p:column headerText="Pais" style="width:30%">
-						<h:outputText value="#{cidade.estado.pais.nome}" />
+					<p:column headerText="Pais" style="width:90%">
+						<h:outputText value="#{pais.nome}" />
 					</p:column>
 					<p:column style="width:10%;text-align: center;" headerText="Ação">
 						<p:commandButton id="selectButton" update=":form:panel"
 							ajax="false"
-							actionListener="#{cidadeBean.prepararAlterarCidade(cidade)}"
+							actionListener="#{paisBean.prepararAlterarPais(pais)}"
 							icon="ui-icon-pencil" title="View">
 						</p:commandButton>
 					</p:column>
