tela do locador

--- a/WebContent/endereco/cidade/index.xhtml
+++ b/WebContent/endereco/cidade/index.xhtml
@@ -16,7 +16,8 @@
 					<h:panelGrid columns="2" cellpadding="5">
 						<h:outputText value="Nome:"></h:outputText>
 						<h:panelGroup>
-							<p:inputText id="cidade-name" label="nome" size="40" required="true" requiredMessage="Por favor, insira o nome."
+							<p:inputText id="cidade-name" label="nome" size="40"
+								required="true" requiredMessage="Por favor, insira o nome."
 								value="#{cidadeBean.cidadeSelecionada.nome}">
 							</p:inputText>
 							<p:message for="cidade-name" />
@@ -32,10 +33,10 @@
 							value="#{cidadeBean.estadoSelecionado}">
 							<f:selectItems value="#{cidadeBean.listaEsdados}" />
 						</p:selectOneMenu>
-						<p:commandButton actionListener="#{cidadeBean.salvarCidade}"
-							update=":grid:listagem" ajax="false" value="Salvar"></p:commandButton>
+						<p:commandButton actionListener="#{cidadeBean.salvarCidade}" ajax="false"
+							update=":grid:listagem" value="Salvar"></p:commandButton>
 						<p:commandButton actionListener="#{cidadeBean.prepararNovaCidade}"
-							update=":form:panel" ajax="false" value="Limpar"></p:commandButton>
+							update=":form:panel" ajax="false" immediate="true" value="Limpar"></p:commandButton>
 					</h:panelGrid>
 					<br style="clear: both;" />
 				</p:panel>
@@ -44,7 +45,8 @@
 			<br />
 			<h:form id="grid">
 				<p:dataTable id="listagem" var="cidade"
-					value="#{cidadeBean.cidadesCadastradas}" paginator="true" rows="10" emptyMessage="Não existem cidades cadastradas."
+					value="#{cidadeBean.cidadesCadastradas}" paginator="true" rows="10"
+					emptyMessage="Não existem cidades cadastradas."
 					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 					rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">
 
@@ -59,7 +61,6 @@
 					</p:column>
 					<p:column style="width:10%;text-align: center;" headerText="Ação">
 						<p:commandButton id="selectButton" update=":form:panel"
-							ajax="false"
 							actionListener="#{cidadeBean.prepararAlterarCidade(cidade)}"
 							icon="ui-icon-pencil" title="View">
 						</p:commandButton>
