--- a/WebContent/livro/autor/index.xhtml
+++ b/WebContent/livro/autor/index.xhtml
@@ -23,9 +23,9 @@
 							<p:message for="autor-name" />
 						</h:panelGroup>
 						<p:commandButton actionListener="#{autorBean.salvarAutor}"
-							update=":grid:listagem" ajax="false" value="Salvar"></p:commandButton>
+							update=":grid:listagem" value="Salvar"></p:commandButton>
 						<p:commandButton actionListener="#{autorBean.prepararNovoAutor}"
-							update=":form:panel" ajax="false" value="Limpar"></p:commandButton>
+							update=":form:panel" value="Limpar"></p:commandButton>
 					</h:panelGrid>
 					<br style="clear: both;" />
 				</p:panel>
@@ -34,15 +34,15 @@
 			<br />
 			<h:form id="grid">
 				<p:dataTable id="listagem" var="autor"
-					value="#{autorBean.autoresCadastrados}" paginator="true" rows="10" emptyMessage="Não existem autores cadastrados."
+					value="#{autorBean.autoresCadastrados}" paginator="true" rows="10"
+					emptyMessage="Não existem autores cadastrados."
 					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-					rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">					
+					rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">
 					<p:column headerText="Autor">
 						<h:outputText value="#{autor.nome}" />
 					</p:column>
 					<p:column style="width:10%;text-align: center;" headerText="Ação">
 						<p:commandButton id="selectButton" update=":form:panel"
-							ajax="false"
 							actionListener="#{autorBean.prepararAlterartAutor(autor)}"
 							icon="ui-icon-pencil" title="View">
 						</p:commandButton>
