--- a/WebContent/endereco/pais/index.xhtml
+++ b/WebContent/endereco/pais/index.xhtml
@@ -23,9 +23,9 @@
 							<p:message for="pais-name" />
 						</h:panelGroup>
 						<p:commandButton actionListener="#{paisBean.salvarPais}"
-							update=":grid:listagem" value="Salvar"></p:commandButton>
+							update=":grid:listagem" ajax="false" value="Salvar"></p:commandButton>
 						<p:commandButton actionListener="#{paisBean.prepararNovoPais}"
-							update=":form:panel" value="Limpar"></p:commandButton>
+							update=":form:panel" ajax="false" value="Limpar"></p:commandButton>
 					</h:panelGrid>
 					<br style="clear: both;" />
 				</p:panel>
