correção tela livro

--- a/WebContent/livro/livro/index.xhtml
+++ b/WebContent/livro/livro/index.xhtml
@@ -70,7 +70,7 @@
 										value="#{livroBean.itemEditado.cutter}" required="true"></h:inputText>
 									<p:commandButton value="Adicionar"
 										actionListener="#{livroBean.adicionarNovoItemLivro}"
-										update=":form:panel"></p:commandButton>
+										update=":form:panel,:growl"></p:commandButton>
 								</h:panelGrid>
 							</p:panel>
 							<br />
