--- a/WebContent/endereco/pais/index.xhtml
+++ b/WebContent/endereco/pais/index.xhtml
@@ -19,13 +19,13 @@
 							<p:inputText id="pais-name" label="nome" size="40"
 								required="true" requiredMessage="Por favor, insira o nome."
 								value="#{paisBean.paisSelecionado.nome}">
-							</p:inputText>
-							<p:message for="pais-name" />
+							</p:inputText>							
 						</h:panelGroup>
 						<p:commandButton actionListener="#{paisBean.salvarPais}"
-							update=":grid:listagem" ajax="false" value="Salvar"></p:commandButton>
-						<p:commandButton actionListener="#{paisBean.prepararNovoPais}"
-							update=":form:panel" ajax="false" value="Limpar"></p:commandButton>
+							update=":grid:listagem,:growl,:form" value="Salvar"></p:commandButton>
+						<p:commandButton
+							onclick="document.getElementById('limparButton').click()"
+							value="Limpar"></p:commandButton>
 					</h:panelGrid>
 					<br style="clear: both;" />
 				</p:panel>
@@ -48,6 +48,11 @@
 						</p:commandButton>
 					</p:column>
 				</p:dataTable>
+			</h:form>
+			<h:form prependId="false">
+				<p:commandButton id="limparButton" style="display:none"
+					actionListener="#{paisBean.prepararNovoPais}" update=":form:panel,:growl"
+					value="Limpar"></p:commandButton>
 			</h:form>
 		</ui:define>
 	</ui:composition>
