--- a/WebContent/livro/assunto/index.xhtml
+++ b/WebContent/livro/assunto/index.xhtml
@@ -20,13 +20,12 @@
 								required="true" requiredMessage="Por favor, insira o nome."
 								value="#{assuntoBean.assuntoSelecionado.nome}">
 							</p:inputText>
-							<p:message for="assunto-name" />
 						</h:panelGroup>
 						<p:commandButton actionListener="#{assuntoBean.salvarAssunto}"
-							update=":grid:listagem" value="Salvar"></p:commandButton>
+							update=":grid:listagem,:growl,:form" value="Salvar"></p:commandButton>
 						<p:commandButton
-							actionListener="#{assuntoBean.prepararNovoAssunto}"
-							update=":form:panel" value="Limpar"></p:commandButton>
+							onclick="document.getElementById('limparButton').click()"
+							value="Limpar"></p:commandButton>
 					</h:panelGrid>
 					<br style="clear: both;" />
 				</p:panel>
@@ -49,6 +48,11 @@
 						</p:commandButton>
 					</p:column>
 				</p:dataTable>
+			</h:form>
+			<h:form prependId="false">
+				<p:commandButton id="limparButton"
+					actionListener="#{assuntoBean.prepararNovoAssunto}"
+					style="display:none" update=":form:panel,:growl" value="Limpar"></p:commandButton>
 			</h:form>
 		</ui:define>
 	</ui:composition>
