--- a/WebContent/endereco/cidade/index.xhtml
+++ b/WebContent/endereco/cidade/index.xhtml
@@ -23,20 +23,22 @@
 							<p:message for="cidade-name" />
 						</h:panelGroup>
 						<h:outputText value="Pais:"></h:outputText>
-						<p:selectOneMenu id="city" value="#{cidadeBean.paisSelecionado}">
+						<p:selectOneMenu id="city" value="#{cidadeBean.paisSelecionado}"
+							required="true">
 							<f:selectItems value="#{cidadeBean.listaPais}" />
 							<p:ajax update="listaEsdadosFiltrados"
 								listener="#{cidadeBean.valueChangePais}" event="change" />
 						</p:selectOneMenu>
 						<h:outputText value="Estado:"></h:outputText>
-						<p:selectOneMenu id="listaEsdadosFiltrados"
+						<p:selectOneMenu id="listaEsdadosFiltrados" required="true"
 							value="#{cidadeBean.estadoSelecionado}">
 							<f:selectItems value="#{cidadeBean.listaEsdados}" />
 						</p:selectOneMenu>
-						<p:commandButton actionListener="#{cidadeBean.salvarCidade}" ajax="false"
-							update=":grid:listagem" value="Salvar"></p:commandButton>
-						<p:commandButton actionListener="#{cidadeBean.prepararNovaCidade}"
-							update=":form:panel" ajax="false" immediate="true" value="Limpar"></p:commandButton>
+						<p:commandButton actionListener="#{cidadeBean.salvarCidade}"
+							update=":grid:listagem,:growl" value="Salvar"></p:commandButton>
+						<p:commandButton
+							onclick="document.getElementById('limparButton').click()"
+							value="Limpar"></p:commandButton>
 					</h:panelGrid>
 					<br style="clear: both;" />
 				</p:panel>
@@ -66,6 +68,11 @@
 						</p:commandButton>
 					</p:column>
 				</p:dataTable>
+			</h:form>
+			<h:form prependId="false">
+				<p:commandButton id="limparButton"
+					actionListener="#{cidadeBean.prepararNovaCidade}"
+					style="display:none" update=":form:panel,:growl" value="Limpar"></p:commandButton>
 			</h:form>
 		</ui:define>
 	</ui:composition>
